--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -1,4 +1,3 @@
-
 name: Deploy static content to Pages
 
 on:
@@ -35,6 +34,9 @@ jobs:
           cache-dependency-path: './'
 
       - run: npm install
+
+      - name: Update offline check file
+        run: echo $(date +%s) > public/offline-check.txt
 
       - name: Build static site
         run: npm run build
